--- a/css/style.css
+++ b/css/style.css
@@ -1100,6 +1100,7 @@ html {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 2;
   width: 99%;
   height: 99%;
   background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url(A5A9A825-44DE-45C8-8EBD-70ED43DAA3B7.jpg);
@@ -1740,6 +1741,10 @@ html {
   color: var(--color-dark-gray);
 }
 
+.events__swiper-sliding {
+  position: relative;
+}
+
 .events__list {
   display: flex;
   flex-flow: row wrap;
@@ -1942,7 +1947,7 @@ html {
   display: flex;
   flex-flow: column nowrap;
   padding: 50px 20px 39px 50px;
-  height: 400px;
+  min-height: 400px;
   border: 1px solid var(--color-grey);
 }
 
@@ -2093,6 +2098,14 @@ html {
 
 .events-swiper-button-next:focus-visible svg path {
   fill: var(--color-light-purpule);
+}
+
+.events-swiper-button-prev.swiper-button-disabled {
+  display: none;
+}
+
+.events-swiper-button-next.swiper-button-disabled {
+  display: none;
 }
 
 /* editions */
@@ -2385,6 +2398,7 @@ html {
 
 .editions__swiper {
   height: 100%;
+  padding-left: 5px;
   overflow: hidden;
 }
 
@@ -2455,8 +2469,21 @@ html {
   cursor: pointer;
 }
 
-.editions__swiper-button:focus-visible {
-  border: thick double var(--color-light-purpule);
+.editions__swiper-button::before {
+  content: '';
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  width: calc(100% + 8px);
+  height: calc(100% + 8px);
+  border: 2px solid #c283f3;
+  border-radius: 100px;
+  opacity: 0;
+}
+
+.editions__swiper-button:focus-visible::before {
+  opacity: 1;
+  transition: opacity 0.2s ease;
 }
 
 .editions__swiper-button:active {
@@ -2952,6 +2979,18 @@ html {
   opacity: 1;
 }
 
+.tippy-box[data-theme~='purpule'] {
+  max-width: 264px;
+  border-radius: 0px;
+  text-align: center;
+  background-color: var(--color-light-purpule);
+  color: var(--color-white);
+}
+
+.tippy-box[data-theme~='purpule'][data-placement^='top'] > .tippy-arrow::before {
+  border-top-color: var(--color-light-purpule);
+}
+
 /* contacts */
 
 .contacts__heading {
@@ -3055,6 +3094,7 @@ html {
 }
 
 .contacts__form-button {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -3072,9 +3112,21 @@ html {
   background-color: transparent;
 }
 
-.contacts__form-button:focus-visible {
-  border: thick double var(--color-light-purpule);
-  transition: border 0.2s ease;
+.contacts__form-button::before {
+  content: '';
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  width: calc(100% + 8px);
+  height: calc(100% + 8px);
+  border: 2px solid #c283f3;
+  border-radius: 100px;
+  opacity: 0;
+}
+
+.contacts__form-button:focus-visible::before {
+  opacity: 1;
+  transition: opacity 0.2s ease;
 }
 
 .contacts__form-button:active:not(:focus-visible) {
@@ -3289,13 +3341,13 @@ html {
 }
 
 @media (min-width: 1200px) {
-  .bg-focus:hover:not(:focus-visible) {
+ /*  .bg-focus:hover:not(:focus-visible) {
     color: var(--color-light-purpule);
   }
 
   .bg-focus:hover:not(:focus-visible) {
     color: var(--color-light-purpule);
-  }
+  } */
 
   .outline-focus:hover:not(:focus-visible) {
     background-color: transparent;
@@ -3332,6 +3384,15 @@ html {
 
   .header__serach-button:hover svg {
     fill: var(--color-light-purpule);
+  }
+
+  .header__link:hover {
+    color: var(--color-light-purpule);
+    transition: color 0.2s ease;
+  }
+
+  .header__link:active {
+    color: var(--color-dark-purpule);
   }
 
   .hero__select-btn:hover:not(:focus-visible) {
@@ -3531,7 +3592,7 @@ html {
     transition: fill 0.2s ease;
   }
 
-  .projects__tooltip:hover .projects__tooltip-description {
+  /* .projects__tooltip:hover .projects__tooltip-description {
     opacity: 1;
     pointer-events: all;
   }
@@ -3539,7 +3600,7 @@ html {
   .projects__tooltip:hover .projects__tooltip-smdescription {
     opacity: 1;
     pointer-events: all;
-  }
+  } */
 
   .project__link:hover:not(:focus-visible)::after {
     opacity: 1;
@@ -3789,6 +3850,18 @@ html {
     max-width: 820px;
   }
 
+  .tippy-box[data-theme~='purpule'] {
+    max-width: 240 px;
+    border-radius: 0px;
+    text-align: center;
+    background-color: var(--color-light-purpule);
+    color: var(--color-white);
+  }
+
+  .tippy-box[data-theme~='purpule'][data-placement^='top'] > .tippy-arrow::before {
+    display: none;
+  }
+
   .contacts__map {
     width: calc(52% + 6px);
   }
@@ -3858,8 +3931,21 @@ html {
   }
 
   .galery__swiper-container {
-    width: 668px;
+    width: 100%;
     margin-bottom: 30px;
+  }
+
+  .galery__img-block {
+    width: 100%;
+  }
+
+  .galery__swiper-button {
+    width: 100%;
+  }
+
+  .galery__image {
+    width: 100%;
+    height: 280px /* calc((750px - 34px) / 2) */;
   }
 
   .catalog__bio_active {
@@ -4051,6 +4137,11 @@ html {
     margin-bottom: 15px;
   }
 
+  .editions__swiper {
+    margin-left: 22px;
+    margin-right: 26px;
+  }
+
   /* .editions__block-slider {
     width: 642px;
     padding-left: 28px;
@@ -4123,7 +4214,7 @@ html {
   }
 
   .galery__swiper-container {
-    width: 290px;
+    /* width: 290px; */
     height: 367px;
   }
 
@@ -4132,6 +4223,10 @@ html {
   }
 
   .galery__img-block {
+    height: 367px;
+  }
+
+  .galery__image {
     height: 367px;
   }
 
@@ -4158,6 +4253,11 @@ html {
   .editions__checkbox {
     max-width: 430px;
     max-height: 230px;
+  }
+
+  .editions__swiper {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .editions__swiper-author {
@@ -4539,6 +4639,14 @@ html {
     display: flex;
   }
 
+  .events-swiper-button-next {
+    display: none;
+  }
+
+  .events-swiper-button-prev {
+    display: none;
+  }
+
   .editions {
     background-image: url(../img/editions-background-320.png);
   }
@@ -4599,6 +4707,10 @@ html {
     display: block;
   }
 
+  .editions__paginations {
+    display: none;
+  }
+
   .projects__container {
     padding-top: 50px;
     padding-bottom: 48px;
@@ -4632,6 +4744,14 @@ html {
 
   .projects__swiper-block:not(:last-child) {
     margin-right: 0;
+  }
+
+  .tippy-box[data-theme~='purpule'] {
+    max-width: 240 px;
+    border-radius: 0px;
+    text-align: center;
+    background-color: var(--color-grey);
+    color: var(--color-white);
   }
 
   .contacts__heading {
@@ -4677,8 +4797,8 @@ html {
   }
 
   .contacts__form-button {
-    width: 128px;
-    height: 40px;
+    min-width: 128px;
+    min-height: 40px;
     margin-bottom: 20px;
     font-size: 12px;
     line-height: 16px;
